testing/tests/ui/no_template_attribute.stderr
error: no attribute `template` found
 --> tests/ui/no_template_attribute.rs:4:8
  |
4 | struct NoTemplate;
  |        ^^^^^^^^^^
