testing/tests/ui/no_template_attribute.rs
use rinja::Template;

#[derive(Template)]
struct NoTemplate;

fn main() {
}
